--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "mining/gpt-2-cloud-run"]
-	path = mining/gpt-2-cloud-run
+	path = gpt-2-cloud-run
 	url = https://github.com/nsaripalli/gpt-2-cloud-run.git
