--- a/gpt-2-cloud-run/Dockerfile
+++ b/gpt-2-cloud-run/Dockerfile
@@ -1,16 +1,17 @@
-FROM tiangolo/uvicorn-gunicorn:python3.7
+FROM python:3.7.3-slim-stretch
 
 RUN apt-get -y update && apt-get -y install gcc
 
-WORKDIR /app
-COPY checkpoint /app/checkpoint
+WORKDIR /
+COPY checkpoint /checkpoint
 
 # Make changes to the requirements/app here.
 # This Dockerfile order allows Docker to cache the checkpoint layer
 # and improve build times if making changes.
-#RUN pip3 --no-cache-dir install tensorflow==1.* gpt-2-simple starlette ujson
-RUN pip install starlette
-COPY test.py /app/main.py
+RUN pip3 --no-cache-dir install tensorflow==1.15.2 gpt-2-simple starlette uvicorn ujson
+COPY app.py /
 
 # Clean up APT when done.
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+
+ENTRYPOINT ["python3", "-X", "utf8", "app.py"]
